syntax = "proto3";

package com.sarmo.notificationservice;

option java_multiple_files = true;
option java_package = "com.sarmo.notificationservice.proto";
option java_outer_classname = "NotificationProto";

service NotificationService {
  rpc SendNewListingsNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string email = 1;
  string subject = 2;
  string body = 3;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}